--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,82 @@
 body{
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(255, 251, 216);
 }/* You can add global styles to this file, and also import other style files */
+
+:root{
+    --yellow1: rgb(255, 232, 101);
+}
+.title{
+    color:rgb(40, 90, 138)
+}
+
+.center-content{
+    border-radius: 3px;
+    margin-top: 5%;
+    padding: 5%;
+    padding-top: 2%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(40, 90, 138);
+    color:rgb(255, 232, 101);
+}
+
+.input-field{
+    border-radius: 3px;
+    background-color: rgb(255, 232, 101);
+    color:rgb(112, 97, 9);
+    padding: 2px;   
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 0
+
+}
+.input-field::placeholder{
+    color: rgb(196, 172, 40);
+}
+
+.input-field:active{
+    border: 0;
+    background-color: white !important;
+}
+.input-field:focus{
+    border: 0;
+    background-color: rgb(255, 241, 159);
+
+}
+
+.error{
+    color: rgb(255, 232, 101);
+}
+
+.mybutton{
+    border-radius: 3px;
+    background-color: rgb(196, 172, 40);
+    color:rgb(112, 97, 9);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;   
+    border: 0;
+}
+.mybutton:active{
+    background-color: rgb(255, 232, 101);
+    border: 0;
+    box-shadow: 5px 5px 5px 0 rgb(24, 61, 95)
+}
+.myhomebutton{
+    border-radius: 3px;
+    background-color: rgb(255, 232, 101);
+    color:rgb(112, 97, 9);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;   
+    border: 0;
+    font-size: x-large;
+}
+.myhomebutton:active{
+    background-color: rgb(255, 242, 170);
+    border: 0;
+    box-shadow: 5px 5px 5px 0 rgb(165, 144, 28)
+}
