--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -10,6 +10,10 @@ Phone number:
 Licence number:
 <Br><Br>
 <input type="text" placeholder=" XXXXX" [(ngModel)]="licence" class="input-field">
+<br><br>
+Email (optional):
+<Br><Br>
+<input type="text" placeholder=" Email" [(ngModel)]="email" class="input-field">
 <br><br><br>
 <button type="submit" (click)="login()" class="mybutton">Register</button>
 <br>
@@ -19,4 +23,11 @@ Licence number:
 </div>
 <div *ngIf="msg2.length>0" class="error">
     {{msg2}}
+</div>
+<div *ngIf="msg3.length>0" class="error">
+    {{msg3}}
+</div>
+<br>
+<div class="info">
+   * Enter your email if you wish to receive email when the transaction is completed
 </div>
