Show qr on click

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <br>
     <br>
 </div>
-<button class="myhomebutton" onclick="fetchData()">My virtual card</button>
+<button class="myhomebutton" (click)="showQR()">My virtual card</button>
 <br><br><br>
 <button class="myhomebutton" (click)="toShare()">Share with friends</button>
 <br>
