Added logout and logging when backend return error

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -27,6 +27,9 @@ Email (optional):
 <div *ngIf="msg3.length>0" class="error">
     {{msg3}}
 </div>
+<div *ngIf="msg4.length>0" class="error">
+    {{msg4}}
+</div>
 <br>
 <div class="info">
    * Enter your email if you wish to receive email when the transaction is completed
