--- a/frontend/src/app/recommend/recommend.component.html
+++ b/frontend/src/app/recommend/recommend.component.html
@@ -1,1 +1,25 @@
-<p>recommend works!</p>
+
+
+<br>
+<h1>Share with friends and get bonuses</h1>
+<br><br>
+Friend phone number
+<br><br>
+<input type="phone" placeholder="+381 XX XXXXXXX" [(ngModel)]="phone" class="input-field">
+<button type="submit" (click)="sendSMS()" class="mybutton">Send SMS invitation</button>
+<br><br>
+Friend email:
+<Br><Br>
+<input type="text" placeholder="Email" [(ngModel)]="email" class="input-field">
+<button type="submit" (click)="sendEmail()" class="mybutton">Send email invitation</button>
+<br><br>
+
+<br>
+<br>
+<div *ngIf="msg.length>0" class="error">
+    {{msg}}
+</div>
+<div *ngIf="msg2.length>0" class="error">
+    {{msg2}}
+</div>
+<br>
