Added background and styled a bit

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,12 +3,18 @@
 <br><br>
 <div *ngIf="showCard">
     <br>
-    <img src="{{imgSource}}" class="card">
+    <!-- <img src="{{imgSource}}" class="card"> -->
+    
     <br>
     <br>
 </div>
-<button class="myhomebutton" onclick="fetchData()">My virtual card</button>
+<button class="myhomebutton" (click)="toCard()" >My virtual card</button>
 <br><br><br>
+<div *ngIf="showShare">
+    <br>
+    <br>
+    <br>
+</div>
 <button class="myhomebutton" (click)="toShare()">Share with friends</button>
 <br>
 <br>
