--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <br><br>
 <div *ngIf="showCard">
     <br>
-    <!-- <img src="{{imgSource}}" class="card"> -->
+    <img src="{{imgSource}}" class="card">
     
     <br>
     <br>
