--- a/frontend/src/app/login-referral/login-referral.component.html
+++ b/frontend/src/app/login-referral/login-referral.component.html
@@ -1,3 +1,4 @@
+<p>login-referral works!</p>
 
 
 <br>
@@ -5,15 +6,15 @@
 <br><br>
 Phone number:
 <br><br>
-<input type="phone" placeholder=" +381 XX XXXXXXX" [(ngModel)]="phone" name="phone" class="input-field">
+<input type="phone" placeholder=" +381 XX XXXXXXX" [(ngModel)]="phone" class="input-field">
 <br><br>
 Licence number:
 <Br><Br>
-    <input type="text" placeholder=" XXXXX" [(ngModel)]="licence" name="licence" class="input-field">
+    <input type="text" placeholder=" XXXXX" [(ngModel)]="licence"  class="input-field">
 <br><br>
 Email (optional):
 <Br><Br>
-    <input type="text" placeholder=" Email" [(ngModel)]="email" name="email" class="input-field">
+    <input type="text" placeholder=" Email" [(ngModel)]="email"  class="input-field">
 <br><br><br>
 <button type="submit" (click)="login()" class="mybutton">Register</button>
 <br>
