--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -103,3 +103,9 @@ body{
 .error{
     color: var(--error);
 }
+
+.centerit{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
