--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 
-<h1>Welcome to <b>NISTaxi</b>!</h1>
+<img width="140" height="140" src="../../assets/nistaxi-logo.png">
 <br><br>
 <div *ngIf="showCard">
     <br>
