--- a/frontend/src/app/login-referral/login-referral.component.html
+++ b/frontend/src/app/login-referral/login-referral.component.html
@@ -1,9 +1,7 @@
 
-<p>login-referral works!</p>
+<img width="140" height="140" src="../../assets/nistaxi-logo.png">
 
-
-<br>
-<h1 >Register</h1>
+<h1>Register</h1>
 <br><br>
 Phone number:
 <br><br>
