--- a/frontend/src/app/recommend/recommend.component.html
+++ b/frontend/src/app/recommend/recommend.component.html
@@ -1,5 +1,5 @@
 
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 <br>
 <h1>Share with friends and get bonuses</h1>
 <br><br>
@@ -18,6 +18,18 @@ Friend email:
 <input type="text" placeholder="Email" [(ngModel)]="email" class="input-field">
 <br><br>
 <button type="submit" (click)="sendEmail()" class="mybutton">Send email invitation</button>
+<br><br>
+<div *ngIf="msg2.length>0" class="error">
+    {{msg2}}
+</div>
+<br><br>
+<a [href]="WAhref" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i> Share on WhatsApp
+</a>
+<br><br>
+<a [href]="Viberhref" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-viber"></i> Share on Viber
+</a>
 <br><br>
 <div *ngIf="msg2.length>0" class="error">
     {{msg2}}
