--- a/frontend/src/app/pump/pump.component.html
+++ b/frontend/src/app/pump/pump.component.html
@@ -8,7 +8,24 @@
  <button class="mybutton" (click)="pay()">Pay transaction</button> <br><br>
  <button class="mybutton" (click)="add_to_card()">Deposit to card</button>
 <br><br>
- <div *ngIf="msg1.length>0" class="error">
+
+
+<br>
+<div *ngIf="payment.balance>0" class="succ">
+Original price: {{payment.balance}}
+<br>
+Paid: {{payment.paid}}
+</div>
+
+<div *ngIf="payment.disc" class="succ">
+    Applied discount of 5%
+</div>
+<div *ngIf="payment.points" class="succ">
+    Applied discount of 1000din (100 points worth)
+</div>
+<br>
+
+<div *ngIf="msg1.length>0" class="error">
     {{msg1}}
 </div>
 <div *ngIf="msg2.length>0" class="error">
@@ -16,6 +33,6 @@
 </div>
 
 
- <div *ngIf="msg_request.length>0">
+ <div *ngIf="msg_request.length>0" [class.succ]="payment.balance!=0" [class.error]="payment.balance==0">
     {{msg_request}}
 </div>
