Margin to logo added and entering email now works

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<img width="140" height="140" src="../../assets/nistaxi-logo.png">
+<img width="140" height="140" src="../../assets/nistaxi-logo.png" class="logo-img">
 <br>
 <h1 >Register</h1>
 <br><br>
