--- a/frontend/src/app/recommend/recommend.component.html
+++ b/frontend/src/app/recommend/recommend.component.html
@@ -1,6 +1,6 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-<img width="140" height="140" src="../../assets/nistaxi-logo.png">
+<img width="140" height="140" src="../../assets/nistaxi-logo.png" class="logo-img">
 <br>
 <h1>Share with friends and get bonuses</h1>
 <br><br>
