--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 
-<img width="140" height="140" src="../../assets/nistaxi-logo.png">
+<img width="140" height="140" src="../../assets/nistaxi-logo.png" class="logo-img">
 <br><br>
 <div *ngIf="showCard">
     <br>
