--- a/frontend/src/app/pump/pump.component.html
+++ b/frontend/src/app/pump/pump.component.html
@@ -1,4 +1,4 @@
-<img width="140" height="140" src="../../assets/nistaxi-logo.png">
+<img width="140" height="140" src="../../assets/nistaxi-logo.png" class="logo-img">
 <br>
 <h1>Transactions simulation</h1>
 <br><br>
