--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,19 +2,15 @@
 <img width="140" height="140" src="../../assets/nistaxi-logo.png" class="logo-img">
 <br>
 <h1 >Register</h1>
-<br><br>
-Phone number:
-<br><br>
+<br>
+<div class="field-header">Phone number:</div>
 <input type="phone" placeholder=" +381 XX XXXXXXX" [(ngModel)]="phone" class="input-field">
-<br><br>
-Licence number:
-<Br><Br>
+<div class="field-header">Licence number:</div>
 <input type="text" placeholder=" XXXXX" [(ngModel)]="licence" class="input-field">
-<br><br>
-Email (optional):
-<Br><Br>
-<input type="text" placeholder=" Email" [(ngModel)]="email" class="input-field">
+<div class="field-header">Email (optional):</div>
+<input type="text" placeholder=" email@domain.com" [(ngModel)]="email" class="input-field">
 <br><br><br>
+
 <button type="submit" (click)="login()" class="mybutton">Register</button>
 <br>
 <br>
