--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -33,6 +33,12 @@ body{
     align-items: center;
     background-color: var(--bg_blue);
     color: var(--yellow1);
+    
+}
+
+.field-header{
+    margin-bottom: 10px;
+    margin-top: 15px;
 }
 
 .input-field{
