--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -10,7 +10,16 @@
     <br>
 </div>
 <div *ngIf="!showCard">
-    <br><br><br><br><br><br><br><br><br>
+    <br><br>
+    <!-- <br><br><br> -->
+    <h2>
+        Welcome to your NISTaxi app!
+    </h2>
+    <br>
+    <h4>
+        Buy, share and earn points and discounts!
+    </h4>
+    <br>
 </div>
 <br><br><br>
 <div *ngIf="showShare">
