--- a/frontend/src/app/recommend/recommend.component.html
+++ b/frontend/src/app/recommend/recommend.component.html
@@ -35,3 +35,4 @@
 <img src={{pathhome}} class="shareicon" (click)="showHome()">
 <img src={{pathqr}} class="shareicon" (click)="showQR()">
 <img src={{pathshare}} class="shareicon">
+<img src={{pathq}} class="shareicon" (click)="showInfo()">
